agrego programa pkemon que muestra imagen de un digimon y garpeta de imagenes

--- a/dom.html
+++ b/dom.html
@@ -2,10 +2,22 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<title>documentos js</title>
+	<title>Pokemon</title>
 	<script type="text/javascript" src="codigo/dom.js"></script>
 </head>
 <body>
-	
+	<h1>Pokemon</h1>
+	<h2>Nombre pokemon: </h2>
+	<h2 id="nombrePokemon">Prueba pokemon </h2>
+	<p>Sonido pokemon: </p>
+	<p id="sonido">Sonido pokemon</p>
+	<p>Vida del pokemon: </p>
+	<p id="vida">Vida pokemon</p>
+	<p>Ataque del pokemon: </p>
+	<p id="ataque">Ataque pokemon</p>
+	<img src="file:///home/neox/Im%C3%A1genes/imagenes%20index/Gatomon_%28Ringless%29_t.gif" height="500" width="500"></img>
+	<script type="text/javascript">
+		inicio();
+	</script>
 </body>
 </html>
